--- a/_config.yml
+++ b/_config.yml
@@ -388,7 +388,7 @@ enable_masonry: true # enables automatic project cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
 enable_darkmode: true # enables switching between light/dark modes
-enable_navbar_social: false # enables displaying social links in the navbar on the about page
+enable_navbar_social: true # enables displaying social links in the navbar on the about page
 enable_project_categories: true # enables categorization of projects into multiple categories
 enable_medium_zoom: true # enables image zoom feature (as on medium.com)
 enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
@@ -644,3 +644,14 @@ jsonresume:
   - languages
   - interests
   - references
+
+  # -----------------------------------------------------------------------------
+# Social links
+# -----------------------------------------------------------------------------
+social:
+  github: https://github.com/DongxuanHe
+  linkedin: www.linkedin.com/in/dongxuan-he-311739225
+  scholar:
+  email: hedxszzx@outlook.com
+  rss: false
+
