--- a/_config.yml
+++ b/_config.yml
@@ -650,7 +650,7 @@ jsonresume:
 # -----------------------------------------------------------------------------
 social:
   github: https://github.com/DongxuanHe
-  linkedin: www.linkedin.com/in/dongxuan-he-311739225
+  linkedin: https://www.linkedin.com/in/dongxuan-he-311739225
   scholar:
   email: hedxszzx@outlook.com
   rss: false
