--- a/_config.yml
+++ b/_config.yml
@@ -637,8 +637,8 @@ jsonresume:
   - education
   - publications
   - projects
-  - volunteer
-  - awards
+  #- volunteer
+  #- awards
   - certificates
   - skills
   - languages
