--- a/_config.yml
+++ b/_config.yml
@@ -153,6 +153,8 @@ collections:
     output: true
   projects:
     output: true
+    sort_by: importance
+    order: descending
 
 # -----------------------------------------------------------------------------
 # Jekyll settings
